# authkit

./: .dockerignore  .eslintrc.cjs  .gitignore  .lintstagedrc.cjs  .prettierignore  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.husky/_/: husky.sh
app/dashboard/: package.json  tsconfig.json
app/server/: Dockerfile  README.md  drizzle.config.ts  package.json  tsconfig.json
docker/: README.md  docker-compose.dev.yml  docker-compose.yml
docker/nginx/: README.md  authkit.conf
docs/: README.md
docs/api-reference/: management-api.mdx  rest-api.mdx  webhooks.mdx
docs/auth-methods/: magic-link.mdx  mfa-totp.mdx  oauth.mdx  passkeys.mdx  password.mdx
docs/customization/: appearance.mdx  custom-redirects.mdx  email-templates.mdx  headless-ui.mdx
docs/deployment/: aws.mdx  docker.mdx  fly-io.mdx  kubernetes.mdx  railway.mdx
docs/frameworks/: django.mdx  express.mdx  fastapi.mdx  nextjs.mdx  rails.mdx  svelte.mdx  vue.mdx
docs/getting-started/: how-it-works.mdx  quickstart.mdx  self-hosting.mdx
docs/sdks/: core.mdx  go.mdx  python.mdx  react.mdx
docs/security/: key-rotation.mdx  rate-limiting.mdx  security-best-practices.mdx  token-architecture.mdx
sdks/python/: README.md  pyproject.toml
sdks/python/authkit/: __init__.py  client.py  django.py  errors.py  fastapi.py  flask.py  framework.py  jwks.py
sdks/python/tests/: test_client.py  test_framework.py  test_jwks.py
tests/: README.md
tools/: README.md
(+168 files in other folders)
