[project]
name = "authkit"
version = "0.1.0"
description = "Python SDK for AuthKit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "PyJWT>=2.9.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["authkit*"]
