[project]
name = "authkit"
version = "0.1.0"
description = "Python SDK for AuthKit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "PyJWT>=2.9.0"
]

[project.optional-dependencies]
fastapi = [
  "fastapi>=0.110.0"
]
flask = [
  "flask>=3.0.0"
]
django = [
  "django>=4.2"
]
frameworks = [
  "fastapi>=0.110.0",
  "flask>=3.0.0",
  "django>=4.2"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["authkit*"]
